@@ -17,6 +17,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -33,16 +34,21 @@ public class SecurityConfiguration {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-//        configuration.setAllowedOrigins(List.of("http://localhost:4200",
-//                                                "https://localhost:4200",
-//                                                "http://frontend-service:4200",
-//                                                "http://bucovala-sebastian.go.ro:4200",
-//                                                "https://bucovala-sebastian.go.ro:4200",
-//                                                "http://172.21.0.2:4200",
-//                                                "https://172.21.0.2:4200",
-//                                                "http://192.168.1.131:4200",
-//                                                "https://192.168.1.131:4200"));
-        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:4200",
+                "https://localhost:4200",
+                "http://frontend-service:4200",
+                "http://frontend-service",
+                "http://bucovala-sebastian.go.ro:4200",
+                "https://bucovala-sebastian.go.ro:4200",
+                "https://bucovala-sebastian.go.ro:5001",
+                "https://bucovala-sebastian.go.ro",
+                "http://172.21.0.2:4200",
+                "https://172.21.0.2:4200",
+                "http://192.168.1.131:4200",
+                "https://192.168.1.131:4200")
+        );
+//        configuration.setAllowedOrigins(List.of("*"));
         configuration.setAllowedMethods(List.of("*"));
         configuration.setAllowedHeaders(List.of("*"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
